app/assets/stylesheets/_spot-tile.scss
.spot-tile {
  border-radius: 3px;
  margin-bottom: 15px;

  &__image {
    background-size: cover;
    width: 100%;
    padding-bottom: 60%;
    border-radius: 3px 3px 0 0;
  }

  &__summary {
    background-color: #fff;
    padding: 10px 16px 10px 54px;
    position: relative;
    height: 46px;

    h3 {
      display: inline-block;
      font-size: 18px;
      line-height: 26px;
      margin: 0 6px 0 0;
    }

    .spot-sub-rating-group,
    .spot-plan-summary {
      display: inline-block;
      position: absolute;
      line-height: 40px;
      top: 50%;
      right: 16px;
      height: 40px;
      margin-top: -20px;
    }
  }

  &__main-rating {
    position: absolute;
    width: 40px;
    height: 46px;
    color: #fff;
    border-radius: 0 0 0 3px;
    top: 0;
    left: 0;
    font-size: 20px;
    line-height: 46px;
    text-align: center;

    &.--positive {
      background-color: #6FCF97;
    }
    &.--mixed {
      background-color: #F2C94C;
    }
    &.--negative {
      background-color: #EB5757;
    }
  }
}

